--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -677,6 +677,18 @@
       "try_again_button_label": "Спробуй ще раз."
     },
     "mood-track-history": {
+      "month_1": "Січ",
+      "month_2": "Лют",
+      "month_3": "Бер",
+      "month_4": "Кві",
+      "month_5": "Тра",
+      "month_6": "Чер",
+      "month_7": "Лип",
+      "month_8": "Сер",
+      "month_9": "Вер",
+      "month_10": "Жов",
+      "month_11": "Лис",
+      "month_12": "Гру",
       "happy": "Щасливим/ою",
       "good": "Задоволеним/ою",
       "sad": "Засмученим/ою",
