--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -677,6 +677,18 @@
       "try_again_button_label": "Încercați din nou"
     },
     "mood-track-history": {
+      "month_1": "Ian",
+      "month_2": "Feb",
+      "month_3": "Mar",
+      "month_4": "Apr",
+      "month_5": "Mai",
+      "month_6": "Iun",
+      "month_7": "Iul",
+      "month_8": "Aug",
+      "month_9": "Sep",
+      "month_10": "Oct",
+      "month_11": "Nov",
+      "month_12": "Dec",
       "happy": "Fericit",
       "good": "Bine",
       "sad": "Trist",
