--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -677,6 +677,7 @@
       "try_again_button_label": "Пробовать снова"
     },
     "mood-track-history": {
+      "all": "Все",
       "month_1": "Янв",
       "month_2": "Фев",
       "month_3": "Мар",
@@ -957,7 +958,8 @@
       "social": "Социальные",
       "latest_results": "Последние результаты",
       "how_it_works": "Как это работает",
-      "see_last_result": "Базовая оценка результатов"
+      "see_last_result": "Базовая оценка результатов",
+      "explore_button_label": "Исследовать карту"
     },
     "baseline-assesment-result": {
       "assessment_completed": "Оценка завершена",
