Refactor: Armenian translation for filter term in hy.json

--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -650,7 +650,7 @@
       "newest": "Ամենանորը",
       "your_questions": "Ձեր հարցերը",
       "search_placeholder": "Որոնում",
-      "filter": "Ֆիլտրել tag-երը",
+      "filter": "Ֆիլտր",
       "no_answers_found": "Պատասխանված հարցեր չկան",
       "language": "Լեզու",
       "all_languages": "Բոլոր լեզուները",
