Add: billing type tabs in SelectProvider

--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -198,7 +198,10 @@
       "wednesday": "Τετ",
       "thursday": "Πεμ",
       "friday": "Παρ",
-      "saturday": "Σαβ"
+      "saturday": "Σαβ",
+      "tab_paid": "Πληρωμένη",
+      "tab_coupon": "Κουπόνι",
+      "tab_free": "Δωρεάν"
     },
     "notification-preferences": {
       "email": "Ειδοποιήσεις μέσω email",
@@ -949,6 +952,7 @@
       "modal_coupon_input_placeholder": "ΚΟΥΠΟΝΙ1",
       "heading_with_coupon": "Επιλέξτε έναν πάροχο για να χρησιμοποιήσετε το κουπόνι: {{coupon}}",
       "remove_coupon_label": "Αφαίρεση κουπονιού",
+      "coupon_not_found_error": "Αυτό το κουπόνι δεν βρέθηκε ή δεν είναι πλέον έγκυρο.",
       "coupon_paragraph": "Τα κουπόνια παρέχουν δωρεάν συνεδρίες και χρηματοδοτούνται από τους συνεργάτες μας.",
       "coupon_paragraph_two": "Εάν έχετε λάβει κωδικό κουπονιού από εκστρατεία στα μέσα κοινωνικής δικτύωσης ή από συνεργάτη, αντιγράψτε τον και επικολλήστε τον παρακάτω. Αφού υποβάλετε τον κωδικό, θα δείτε τους παρόχους που τον υποστηρίζουν και τη διαθεσιμότητά τους. Ένα κουπόνι μπορεί να καλύπτει μία ή περισσότερες συνεδρίες. Η πλατφόρμα θα σας ενημερώσει εάν το κουπόνι έχει λήξει ή εάν έχει φτάσει στο μέγιστο όριο χρήσεων.",
       "max_price": "Μέγιστη τιμή",
