--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -198,7 +198,12 @@
       "wednesday": "Wed",
       "thursday": "Thu",
       "friday": "Fri",
-      "saturday": "Sat"
+      "saturday": "Sat",
+      "tab_paid": "Paid",
+      "tab_coupon": "Coupon",
+      "tab_free": "Free",
+      "choose-the-provider": "Choose the provider you want to talk to using video, audio or text. It may sometimes take a few sesions to find a provider that is a good fit for your needs and your preferred approach.",
+      "coupon_note": "This time, we've entered a code for you for a free session! Schedule an appointment with one of our consultants and take the first step towards improving your well-being."
     },
     "notification-preferences": {
       "email": "Email notifications",
@@ -954,6 +959,7 @@
       "modal_coupon_input_placeholder": "COUPON1",
       "heading_with_coupon": "Select a  Provider to use Coupon: {{coupon}}",
       "remove_coupon_label": "Remove coupon",
+      "coupon_not_found_error": "This coupon was not found or is no longer valid.",
       "coupon_paragraph": "Coupons provide “no-cost” sessions and are sponsored by our partners.",
       "coupon_paragraph_two": "If you received a coupon code from a social media campaign or a partner, please copy and paste that below. After you submit the coupon code, you will see any providers that support it and their availability. A coupon may support one or more sessions. The platform will indicate if the coupon has expired or reached the maximum session usage.",
       "max_price": "Maximum price",
