--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -198,7 +198,10 @@
       "wednesday": "Ср",
       "thursday": "Чт",
       "friday": "Пт",
-      "saturday": "Сб"
+      "saturday": "Сб",
+      "tab_paid": "Платно",
+      "tab_coupon": "Купон",
+      "tab_free": "Бесплатно"
     },
     "notification-preferences": {
       "email": "Уведомления по электронной почте",
@@ -946,6 +949,7 @@
       "modal_coupon_input_placeholder": "КУПОН 1",
       "heading_with_coupon": "Выберите консультанта для использования купона: {{coupon}}",
       "remove_coupon_label": "Удалить купон",
+      "coupon_not_found_error": "Этот купон не найден или больше не действителен.",
       "coupon_paragraph": "Купоны предоставляют \"бесплатные\" сессии и спонсируются нашими партнерами.",
       "coupon_paragraph_two": "Если Вы получили код купона через социальные сети или от нашего партнера, пожалуйста, скопируйте и вставьте его ниже. После того, как Вы отправите код купона, Вы увидите всех консультантов, которые его поддерживают, и их доступность. Купон может предоставлять один или несколько сеансов. Платформа укажет, истек ли срок действия купона или все сеансы использованы.",
       "max_price": "Максимальная цена",
