--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -198,7 +198,10 @@
       "wednesday": "Ср",
       "thursday": "Чт",
       "friday": "Пт",
-      "saturday": "Сб"
+      "saturday": "Сб",
+      "tab_paid": "Платно",
+      "tab_coupon": "Купон",
+      "tab_free": "Безкоштовно"
     },
     "notification-preferences": {
       "email": "Сповіщення електронною поштою",
@@ -953,6 +956,7 @@
       "modal_coupon_input_placeholder": "КУПОН1",
       "heading_with_coupon": "Виберіть консультанта/ку для використання купона: {{coupon}}",
       "remove_coupon_label": "Видалити купон",
+      "coupon_not_found_error": "Цей купон не знайдено або він більше не дійсний.",
       "coupon_paragraph": "Наші партнери спонсорують купони, які забезпечують безкоштовні сесії.",
       "coupon_paragraph_two": "Будь ласка, скопіюйте код, який Ви отримали, і вставте його нижче. Після надсилання коду купона Ви побачите всіх консультантів, які його обслуговують, та їхню доступність.",
       "max_price": "Максимальна ціна",
