--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -198,7 +198,10 @@
       "wednesday": "Ср",
       "thursday": "Бс",
       "friday": "Жм",
-      "saturday": "Сб"
+      "saturday": "Сб",
+      "tab_paid": "Ақылы",
+      "tab_coupon": "Купон",
+      "tab_free": "Тегін"
     },
     "notification-preferences": {
       "email": "Электрондық пошта арқылы хабарландырулар",
@@ -944,6 +947,7 @@
       "modal_coupon_input_placeholder": "КУПОН 1",
       "heading_with_coupon": "Купонды пайдалану үшін консультантті таңдаңыз",
       "remove_coupon_label": "Купонды жою",
+      "coupon_not_found_error": "Бұл купон табылмады немесе енді жарамсыз.",
       "coupon_paragraph": "Купондар «тегін» сессияларды қамтамасыз етеді және серіктестеріміздің демеушілігімен жүзеге асырылады.",
       "coupon_paragraph_two": "Егер Сіз әлеуметтік желілер арқылы немесе серіктесімізден купон кодын алсаңыз, кодты көшіріп, төменде қойыңыз. Купон кодын жібергеннен кейін Сіз оны қолдайтын барлық консультанттарды және олардың қолжетімділігін көресіз. Купон бір немесе бірнеше сеансты қамтамасыз ете алады. Платформа купонның мерзімі өткенін немесе барлық сеанстардың қолданылғанын көрсетеді.",
       "max_price": "Ең жоғары баға",
